sanity check bug fix; top-level components checked; found issues; fixed specification.

--- a/dbs/freeems-puma-spin1/configurations.yaml
+++ b/dbs/freeems-puma-spin1/configurations.yaml
@@ -7,7 +7,7 @@ description: |
 components:
   - 'MCR10EZPF1001'
   - 'RSF200JB-1R0'
-  - '52000001009'
+  #- '52000001009' # unused
   - [ 11, 'RMCF0805FT10K0' ]
   - [ 2, 'RMCF0805JT10M0' ]
   - 'RMCF0805JT22K0'
