--- a/dbs/freeems-puma-spin1/suppliers.yaml
+++ b/dbs/freeems-puma-spin1/suppliers.yaml
@@ -1,7 +1,9 @@
 digikey:
   title: DigiKey
   homepage: http://www.digikey.com/
+  currency: USD
 ## this entry is not defined, as no supply information for it is defined in the components yet
-# farnell:
-#   title: Farnell
-#   homepage: http://www.farnell.com/
+# farnell-fi:
+#   title: Farnell Finland
+#   homepage: http://fi.farnell.com/
+#   currency: EUR
