--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,7 @@
 
 freebombs:
-  db_path: ./dbs/freeems-puma-spin1
+  dbs_path: ./dbs
+  db_name: test
   locale_strings: ./rsrc/strings.yaml
   currency: EUR
 
