Initial RSence web app structure in place. Only the settings gui is implemented. You'll need RSence 2.2 or newer to run the project. At this stage, it's in development, so install the most recent rsence-pre gem

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,4 +1,11 @@
-
+# RSence-specific config:
+:index_html:
+  :title: FreeBOMBS
+:lib_paths:
+  - ./lib
+:transporter_conf:
+  :client_autoreload: true
+# FreeBOMBS-specific config:
 freebombs:
   dbs_path: ./dbs
   db_name: test
