layout fixes, some polish and component lists now have titles and pdf links

--- a/plugins/freebombs_web/gui.yaml
+++ b/plugins/freebombs_web/gui.yaml
@@ -10,6 +10,7 @@ dependencies:
 class: RSence.GUIApp
 options:
   label: :app_title
+  component_db: :component_db
 subviews:
 - class: HView
   rect: [ 0, 0, 960, 500, 0, 0 ]
