--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -19,6 +19,6 @@
 # FreeBOMBS-specific config:
 freebombs:
   dbs_path: ./dbs
-  db_name: freeems-puma-spin1
+  db_name: test
   locale_strings: ./rsrc/strings.yaml
   currency: EUR
